Adding Fixing changes

--- a/Demon0515-MongoDB-731/ClientApp/src/css/MainGame.css
+++ b/Demon0515-MongoDB-731/ClientApp/src/css/MainGame.css
@@ -987,7 +987,9 @@ div#potdiv {
 }
 
 .react-player video {
-  height: 242px !important;
+  /* height: 242px !important; */
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .PlayerDealer {
